[gd_scene load_steps=2 format=3 uid="uid://cdo34epvls2mf"]

[ext_resource type="Script" uid="uid://cyao2cope1cov" path="res://autoloads/_inventory_ui_slot.gd" id="1_6h5df"]

[node name="InventorySlot" type="Panel"]
custom_minimum_size = Vector2(48, 48)
offset_right = 48.0
offset_bottom = 48.0
script = ExtResource("1_6h5df")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Sprite" type="Sprite2D" parent="MarginContainer/CenterContainer"]

[node name="QuantityLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/outline_size = 2

[node name="SlotButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InventoryUIMenu" type="PanelContainer" parent="."]
process_mode = 4
visible = false
top_level = true
custom_minimum_size = Vector2(188, 0)
layout_mode = 0
offset_left = -192.0
offset_right = -4.0
offset_bottom = 32.0

[node name="MarginContainer" type="MarginContainer" parent="InventoryUIMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryUIMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="InventoryUIMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Item Name Label"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EffectLabel" type="Label" parent="InventoryUIMenu/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Item Effect Label"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="InventoryUIMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="UseButton" type="Button" parent="InventoryUIMenu/MarginContainer/VBoxContainer/ButtonContainer"]
visible = false
custom_minimum_size = Vector2(180, 24)
layout_mode = 2
mouse_filter = 1
text = "USE"

[node name="DropButton" type="Button" parent="InventoryUIMenu/MarginContainer/VBoxContainer/ButtonContainer"]
visible = false
custom_minimum_size = Vector2(180, 24)
layout_mode = 2
mouse_filter = 1
text = "DROP"

[connection signal="gui_input" from="SlotButton" to="." method="_on_slot_button_gui_input"]
[connection signal="mouse_exited" from="InventoryUIMenu" to="." method="_on_menu_mouse_exited"]
[connection signal="pressed" from="InventoryUIMenu/MarginContainer/VBoxContainer/ButtonContainer/UseButton" to="." method="_on_use_button_pressed"]
[connection signal="pressed" from="InventoryUIMenu/MarginContainer/VBoxContainer/ButtonContainer/DropButton" to="." method="_on_drop_button_pressed"]
